		- use JAXP instead of com.microstar.xml for parsing the config
		  files. WARNING: this breaks API compatibility (class NodeHandler).
		  Since I don't think anyone uses that, I'm going forward with it
		  on a minor release anyway.
		- work around a problem with the way class loaders work by
		  registering some fake dependencies at runtime.
		- allow case insensitive sorting of the tree.

	[alan ezust]
        - new actions: projectviewer_parent-group - opens parent group or project

        projectviewer_set-active - opens currently selected node if it is a group or project.

        projectviewer_new-file - opens a new file in the same directory as the
        currently selected selected pv node.

VERSION 2.1.3.3:
	[marcelo vanzin]
		- better handle the PV dockable being closed; old code was more
		  prone to not freeing memory that could be freed.
		- fix SF bug # 1493976: when re-importing, need to check if the
		  VPTDirectory.getFile() is under the old root, since getNodePath()
		  is changed when the directory doesn't exist anymore.

VERSION 2.1.3.2:
	[marcelo vanzin]
		- fix IconComposer again: fix in 2.1.3.1 disabled icon composing
		  altogether.

VERSION 2.1.3.1:
	[marcelo vanzin]
		- fix IconComposer: VFSFile provides null as the file argument
		  when asking for the status icon, and this was causing an NPE.

VERSION 2.1.3:
	[marcelo vanzin]
		- added filtered view contributed by Rudolf Widmann
		- some cosmetic/usability changes to external app config pane
		  (also done for filter config pane)
		- fix a nasty problem in the base64 decoding function: padding
		  was not being ignored when decoding encoded string.
		- fix more AWT thread-safety issues.
		- add a scroll bar to the config pane.
		- force reading config files in UTF-8; hopefully fixes problem
		  with reading paths in different code pages (SF bug 1464040).

VERSION 2.1.2:
	[marcelo vanzin]
		- fix calling GUIUtilities.getParentDialog() with a null parameter,