@@ -30,6 +30,7 @@ import org.gjt.sp.jedit.GUIUtilities;
 
 import projectviewer.vpt.VPTNode;
 import projectviewer.action.Action;
+import projectviewer.config.ProjectOptions;
 //}}}
 
 /**
@@ -56,6 +57,7 @@ public class DummyAction extends Action {
 	/** Creates a new project. */
 	public void actionPerformed(ActionEvent e) {
 		JOptionPane.showMessageDialog(viewer, "Dummy action test");
+		ProjectOptions.run(null, null, null, "dummy");
 	} //}}}
 
 }
