@@ -29,6 +29,14 @@ VERSION 2.1.3.4:
 		- work around a problem with the way class loaders work by
 		  registering some fake dependencies at runtime.
 		- allow case insensitive sorting of the tree.
+		- create an action set with actions to activate groups and
+		  projects available in PV, so that it's possible to assign
+		  keyboard shortcuts for those actions.
+		- fix an NPE when using the "create group" and "create project"
+		  menu items in the "combo" box.
+		- add a new method that activates a specific option pane when
+		  showing the project options dialog.
+		- get rid of a few deprecation warnings.
 
 	[alan ezust]
         - new actions: projectviewer_parent-group - opens parent group or project
